--- a/docs/gravitino-metadata-manage.mdx
+++ b/docs/gravitino-metadata-manage.mdx
@@ -46,7 +46,7 @@ Assuming Gravitino has just started, and the host and post is `http://localhost:
 
 ### Create a metalake
 
-Users can create a metalake by sending a `POST` request to the `/api/v1/metalakes` endpoint or just use the Gravitino Java client.
+Users can create a metalake by sending a `POST` request to the `/api/metalakes` endpoint or just use the Gravitino Java client.
 The following is an example of creating a metalake:
 
 <Tabs>
@@ -60,11 +60,6 @@ The following is an example of creating a metalake:
   <TabItem value="java" label="java">
 
     ```java
-    import com.datastrato.gravitino.client.GravitinoClient;
-    import com.datastrato.gravitino.client.GravitinoMetaLake;
-    import java.util.HashMap;
-    public class UserGuide {
-    public static void main(String[] args) {
     GravitinoClient gravitinoClient = GravitinoClient
         .builder("http://127.0.0.1:8090")
         .build();
@@ -72,9 +67,7 @@ The following is an example of creating a metalake:
         NameIdentifier.of("metalake"),
         "This is a new metalake",
         new HashMap<>());
-    // ...
-        }
-    }
+      // ...
     ```
 
   </TabItem>
@@ -82,27 +75,23 @@ The following is an example of creating a metalake:
 
 ### Load a metalake
 
-Users can create a metalake by sending a `GET` request to the `/api/v1/metalakes/{metalake_name}` endpoint or just use the Gravitino Java client. The following is an example of loading a metalake:
+Users can create a metalake by sending a `GET` request to the `/api/metalakes/{metalake_name}` endpoint or just use the Gravitino Java client. The following is an example of loading a metalake:
 
 ```bash
 curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: application/json"  http://localhost:8090/api/metalakes/metalake
 ```
 
 ```java
-public class MetalakeExample {
-  public static void main(String[] args) {
     // ...
     GravitinoMetaLake loaded = gravitinoClient.loadMetalake(
         NameIdentifier.of("metalake"));
     // ...
-  }
-}
 ```
 
 
 ### Alter a metalake
 
-Users can modify a metalake by sending a `PUT` request to the `/api/v1/metalakes/{metalake_name}` endpoint or just use the Gravitino Java client. The following is an example of altering a metalake:
+Users can modify a metalake by sending a `PUT` request to the `/api/metalakes/{metalake_name}` endpoint or just use the Gravitino Java client. The following is an example of altering a metalake:
 
 ```bash
 curl -X PUT -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: application/json" -d '{
@@ -122,16 +111,12 @@ curl -X PUT -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
 
 
 ```java
-public class MetalakeExample {
-  public static void main(String[] args) {
     // ...
     GravitinoMetaLake renamed = gravitinoClient.alterMetalake(
         NameIdentifier.of("new_metalake"),
         MetalakeChange.rename("new_metalake_renamed")
     );
    // ...
-  }
-}
 ```
 
 Currently, Gravitino supports the following changes to a metalake:
@@ -148,7 +133,7 @@ Currently, Gravitino supports the following changes to a metalake:
 
 ### Drop a metalake
 
-Users can remove a metalake by sending a `DELETE` request to the `/api/v1/metalakes/{metalake_name}` endpoint or just use the Gravitino Java client. The following is an example of dropping a metalake:
+Users can remove a metalake by sending a `DELETE` request to the `/api/metalakes/{metalake_name}` endpoint or just use the Gravitino Java client. The following is an example of dropping a metalake:
 
 
 ```bash
@@ -156,36 +141,26 @@ curl -X DELETE -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: 
 ````
 
 ```java
-public class MetalakeExample {
-  public static void main(String[] args) {
-    
     // ...
     boolean success = gravitinoClient.dropMetalake(
         NameIdentifier.of("metalake")
     );
     // ...
-  }
-}
 ```
 
 ### List all metalakes
 
 
-Users can list metalakes by sending a `GET` request to the `/api/v1/metalakes` endpoint or just use the Gravitino Java client. The following is an example of listing all metalake name:
+Users can list metalakes by sending a `GET` request to the `/api/metalakes` endpoint or just use the Gravitino Java client. The following is an example of listing all metalake name:
 
 ```bash
 curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: application/json"  http://localhost:8090/api/metalakes
 ```
 
 ```java
-public class MetalakeExample {
-  public static void main(String[] args) {
-    
     // ...
     GravitinoMetaLake[] allMetalakes = gravitinoClient.listMetalakes();
     // ...
-  }
-}
 ```
 
 ## Catalogs Operations
@@ -196,7 +171,7 @@ public class MetalakeExample {
 Users should create a metalake before creating a catalog.
 :::
 
-Users can create a catalog by sending a `POST` request to the `/api/v1/metalakes/{metalake_name}/catalogs` endpoint or just use the Gravitino Java client. The following is an example of creating a catalog:
+Users can create a catalog by sending a `POST` request to the `/api/metalakes/{metalake_name}/catalogs` endpoint or just use the Gravitino Java client. The following is an example of creating a catalog:
 
 
 ```bash
@@ -212,17 +187,6 @@ curl -X POST -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: ap
 ```
 
 ```java
-import com.datastrato.gravitino.Catalog;
-import com.datastrato.gravitino.Catalog.Type;
-import com.datastrato.gravitino.NameIdentifier;
-import com.datastrato.gravitino.client.GravitinoClient;
-import com.datastrato.gravitino.client.GravitinoMetaLake;
-import com.google.common.collect.ImmutableMap;
-import java.util.Map;
-
-public class CatalogExample {
-
-  public static void main(String[] args) {
     GravitinoClient gravitinoClient = GravitinoClient
         .builder("http://127.0.0.1:8090")
         .build();
@@ -243,23 +207,17 @@ public class CatalogExample {
         "This is a hive catalog",
         hiveProperties);
     // ...
-  }
-}
 ```
 
 ### Load a catalog
 
-Users can load a catalog by sending a `GET` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}` endpoint or just use the Gravitino Java client. The following is an example of loading a catalog:
+Users can load a catalog by sending a `GET` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}` endpoint or just use the Gravitino Java client. The following is an example of loading a catalog:
 
 ```bash
 curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: application/json" http://localhost:8090/api/metalakes/metalake/catalogs/catalog
 ```
 
 ```java
-public class CatalogExample {
-
-  public static void main(String[] args) {
-    
     // ...
     // Assuming you have just created a metalake named `metalake`
     GravitinoMetaLake gravitinoMetaLake =
@@ -267,13 +225,11 @@ public class CatalogExample {
 
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "catalog"));
     // ...
-  }
-}
 ```    
 
 ### Alter a catalog
 
-Users can modify a catalog by sending a `PUT` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}` endpoint or just use the Gravitino Java client. The following is an example of altering a catalog:
+Users can modify a catalog by sending a `PUT` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}` endpoint or just use the Gravitino Java client. The following is an example of altering a catalog:
 
 
 ```bash
@@ -294,10 +250,6 @@ curl -X PUT -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
 
 
 ```java
-public class CatalogExample {
-
-  public static void main(String[] args) {
-    
     // ...
     // Assuming you have just created a metalake named `metalake`
     GravitinoMetaLake gravitinoMetaLake =
@@ -306,8 +258,6 @@ public class CatalogExample {
     Catalog catalog = gravitinoMetaLake.alterCatalog(NameIdentifier.of("metalake", "catalog"),
         CatalogChange.rename("alter_catalog"), CatalogChange.updateComment("new comment"));
     // ...
-  }
-}
 ```
 
 Currently, Gravitino supports the following changes to a catalog:
@@ -322,30 +272,24 @@ Currently, Gravitino supports the following changes to a catalog:
 
 ### Drop a catalog
 
-Users can remove a catalog by sending a `DELETE` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}` endpoint or just use the Gravitino Java client. The following is an example of droping a catalog:
+Users can remove a catalog by sending a `DELETE` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}` endpoint or just use the Gravitino Java client. The following is an example of droping a catalog:
 
 ```bash
 curl -X DELETE -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: application/json" http://localhost:8090/api/metalakes/metalake/catalogs/catalog
 ```
 
 ```java
-
-public class CatalogExample {
-
-  public static void main(String[] args) {
-    
     // ...
     // Assuming you have just created a metalake named `metalake`
     GravitinoMetaLake gravitinoMetaLake =
         gravitinoClient.loadMetalake(NameIdentifier.of("metalake"));
     gravitinoMetaLake.dropCatalog(NameIdentifier.of("metalake", "catalog"));
     // ...
-  }
 ```
 
 ### List all catalogs in a metalake
 
-Users can list all catalogs under a metalake by sending a `GET` request to the `/api/v1/metalakes/{metalake_name}/catalogs` endpoint or just use the Gravitino Java client. The following is an example of listing all catalogs in
+Users can list all catalogs under a metalake by sending a `GET` request to the `/api/metalakes/{metalake_name}/catalogs` endpoint or just use the Gravitino Java client. The following is an example of listing all catalogs in
 a metalake:
 
 
@@ -354,10 +298,6 @@ curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
     ```
 
 ```java
-public class CatalogExample {
-
-  public static void main(String[] args) {
-
   // ...
   // Assuming you have just created a metalake named `metalake`
   GravitinoMetaLake gravitinoMetaLake =
@@ -365,8 +305,6 @@ public class CatalogExample {
 
   NameIdentifier[] catalogsIdents = gravitinoMetaLake.listCatalogs(Namespace.ofCatalog("metalake"));
   // ...
-}
-}
 ```
 
 
@@ -378,7 +316,7 @@ Users should create a metalake and a catalog before creating a schema.
 
 ### Create a schema
 
-Users can create a schema by sending a `POST` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas` endpoint or just use the Gravitino Java client. The following is an example of creating a schema:
+Users can create a schema by sending a `POST` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas` endpoint or just use the Gravitino Java client. The following is an example of creating a schema:
 
 
 ```bash
@@ -392,18 +330,6 @@ curl -X POST -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: ap
 ```
 
 ```java
-import com.datastrato.gravitino.Catalog;
-import com.datastrato.gravitino.NameIdentifier;
-import com.datastrato.gravitino.client.GravitinoClient;
-import com.datastrato.gravitino.client.GravitinoMetaLake;
-import com.datastrato.gravitino.rel.Schema;
-import com.datastrato.gravitino.rel.SupportsSchemas;
-import com.google.common.collect.ImmutableMap;
-import java.util.Map;
-
-public class SchemaExample {
-
-  public static void main(String[] args) {
     GravitinoClient gravitinoClient = GravitinoClient
         .builder("http://127.0.0.1:8090")
         .build();
@@ -425,13 +351,11 @@ public class SchemaExample {
         schemaProperties
     );
     // ...
-  }
-}
 ```
 
 ### Load a schema
 
-Users can create a schema by sending a `GET` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}` endpoint or just use the Gravitino Java client. The following is an example of loading a schema:
+Users can create a schema by sending a `GET` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}` endpoint or just use the Gravitino Java client. The following is an example of loading a schema:
 
 
 ```bash
@@ -439,25 +363,18 @@ curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
 ```
 
 ```java
-public class SchemaExample {
-
-  public static void main(String[] args) {
-
     // ...
     // Assuming you have just created a Hive catalog named `hive_catalog`
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "catalog"));
     SupportsSchemas supportsSchemas = catalog.asSchemas();
     Schema schema = supportsSchemas.loadSchema(NameIdentifier.of("metalake", "catalog", "schema"));
     // ...
-  }
-}
 ```
 
 ### Alter a schema
-Users can change a schema by sending a `PUT` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}` endpoint or just use the Gravitino Java client. The following is an example of modifying a schema:
+Users can change a schema by sending a `PUT` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}` endpoint or just use the Gravitino Java client. The following is an example of modifying a schema:
 
 ```bash
-
 curl -X PUT -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: application/json" -d '{
   "updates": [
     {
@@ -474,10 +391,6 @@ curl -X PUT -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
 
 
 ```java
-public class SchemaExample {
-
-  public static void main(String[] args) {
-    
     // ...
     // Assuming you have just created a Hive catalog named `hive_catalog`
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "hive_catalog"));
@@ -488,8 +401,6 @@ public class SchemaExample {
         SchemaChange.removeProperty("key1"),
         SchemaChange.setProperty("key2", "value2"));
     // ...
-  }
-}
 ```
 
 Currently, Gravitino supports the following changes to a schema:
@@ -501,7 +412,7 @@ Currently, Gravitino supports the following changes to a schema:
 
 
 ### Drop a schema
-Users can remove a schema by sending a `DELETE` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}` endpoint or just use the Gravitino Java client. The following is an example of droping a schema:
+Users can remove a schema by sending a `DELETE` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}` endpoint or just use the Gravitino Java client. The following is an example of droping a schema:
 
 
 ```bash
@@ -511,10 +422,6 @@ curl -X DELETE -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: 
 
 
 ```java
-public class SchemaExample {
-
-  public static void main(String[] args) {
-    
     // ...
     // Assuming you have just created a Hive catalog named `hive_catalog`
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "catalog"));
@@ -522,12 +429,10 @@ public class SchemaExample {
     SupportsSchemas supportsSchemas = catalog.asSchemas();
     // cascade can be true or false
     supportsSchemas.dropSchema(NameIdentifier.of("metalake", "catalog", "schema"), true);
-  }
-}
 ```
 
 ### List all schemas under a catalog
-Users can all all schemas under a catalog by sending a `GET` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas` endpoint or just use the Gravitino Java client. The following is an example of list all schema
+Users can all all schemas under a catalog by sending a `GET` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas` endpoint or just use the Gravitino Java client. The following is an example of list all schema
     in a catalog:
 
 ```bash
@@ -535,19 +440,12 @@ curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
 ```
 
 ```java
-public class SchemaExample {
-
-  public static void main(String[] args) {
-    
     // ...
     // Assuming you have just created a Hive catalog named `hive_catalog`
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "catalog"));
 
     SupportsSchemas supportsSchemas = catalog.asSchemas();
     NameIdentifier[] schemas = supportsSchemas.listSchemas(Namespace.ofSchema("metalake", "catalog"));
-  }
-}
-
 ```
 
 ## Tables Operations
@@ -558,7 +456,7 @@ Users should create a metalake, a catalog and a schema before creating a table.
 
 ### Create a table
 
-Users can create a table by sending a `POST` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables` endpoint or just use the Gravitino Java client. The following is an example of creating a table:
+Users can create a table by sending a `POST` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables` endpoint or just use the Gravitino Java client. The following is an example of creating a table:
 
 ```bash
 curl -X POST -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: application/json" -d '{
@@ -586,19 +484,6 @@ curl -X POST -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: ap
 
 
 ```java
-import com.datastrato.gravitino.Catalog;
-import com.datastrato.gravitino.NameIdentifier;
-import com.datastrato.gravitino.client.GravitinoClient;
-import com.datastrato.gravitino.client.GravitinoMetaLake;
-import com.datastrato.gravitino.dto.rel.ColumnDTO;
-import com.datastrato.gravitino.rel.TableCatalog;
-import com.datastrato.gravitino.rel.types.Types;
-import com.google.common.collect.ImmutableMap;
-import java.util.Map;
-
-public class TableExample {
-
-  public static void main(String[] args) {
     GravitinoClient gravitinoClient = GravitinoClient
         .builder("http://127.0.0.1:8090")
         .build();
@@ -634,8 +519,6 @@ public class TableExample {
         "Create a new Table",
         tablePropertiesMap
     );
-  }
-}
 ```
 
 In addition to the basic settings, you support the following features:
@@ -769,7 +652,7 @@ curl -X POST -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: ap
 
 ### Load a table
 
-Users can load a table by sending a `GET` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables/{table_name}` endpoint or just use the Gravitino Java client. The following is an example of loading a table:
+Users can load a table by sending a `GET` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables/{table_name}` endpoint or just use the Gravitino Java client. The following is an example of loading a table:
 
 ```bash
 curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: application/json"  http://localhost:8090/api/metalakes/metalake/catalogs/catalog/schemas/schema/tables/table
@@ -777,10 +660,6 @@ curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
 ```
 
 ```java
-public class TableExample {
-
-  public static void main(String[] args) {
-    
     // ...
     // Assuming you have just created a Hive catalog named `catalog`
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "catalog"));
@@ -788,14 +667,11 @@ public class TableExample {
     TableCatalog tableCatalog = catalog.asTableCatalog();
     tableCatalog.loadTable(NameIdentifier.of("metalake", "hive_catalog", "schema", "table")); 
     // ...
-  }
-}
-
 ```
 
 ### Alter a table
 
-Users can modify a table by sending a `PUT` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables/{table_name}` endpoint or just use the Gravitino Java client. The following is an example of modifying a table:
+Users can modify a table by sending a `PUT` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables/{table_name}` endpoint or just use the Gravitino Java client. The following is an example of modifying a table:
 
 
 ```bash
@@ -814,10 +690,6 @@ curl -X PUT -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
 
 
 ```java
-public class TableExample {
-
-public static void main(String[] args) {
-  
     // ...
     // Assuming you have just created a Hive catalog named `catalog`
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "catalog"));
@@ -827,8 +699,6 @@ public static void main(String[] args) {
     Table t = tableCatalog.alterTable(NameIdentifier.of("metalake", "catalog", "schema", "table"),
         TableChange.rename("table_renamed"), TableChange.updateComment("xxx"));
     // ...
-  }
-}
 ```
 
 Currently, Gravitino supports the following changes to a table:
@@ -849,7 +719,7 @@ Currently, Gravitino supports the following changes to a table:
 
 ### Drop a table
 
-Users can remove a table by sending a `DELETE` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables/{table_name}` endpoint or just use the Gravitino Java client. The following is an example of droping a table:
+Users can remove a table by sending a `DELETE` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables/{table_name}` endpoint or just use the Gravitino Java client. The following is an example of droping a table:
 
 
 ```bash
@@ -857,10 +727,6 @@ curl -X DELETE -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: 
 ```
 
 ```java
-
-public class TableExample {
-
-  public static void main(String[] args) {
     // ...
     // Assuming you have just created a Hive catalog named `hive_catalog`
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "catalog"));
@@ -868,14 +734,12 @@ public class TableExample {
     TableCatalog tableCatalog = catalog.asTableCatalog();
     tableCatalog.dropTable(NameIdentifier.of("metalake", "catalog", "schema", "table"));
     // ...
-  }
-}
 ```
 
 
 ### List all tables under a schema
 
-Users can list all tables in a schema by sending a `GET` request to the `/api/v1/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables` endpoint or just use the Gravitino Java client. The following is an example of list all tables in a schema:
+Users can list all tables in a schema by sending a `GET` request to the `/api/metalakes/{metalake_name}/catalogs/{catalog_name}/schemas/{schema_name}/tables` endpoint or just use the Gravitino Java client. The following is an example of list all tables in a schema:
 
 
 ```bash
@@ -883,9 +747,6 @@ curl -X GET -H "Accept: application/vnd.gravitino.v1+json" -H "Content-Type: app
 ```
 
 ```java
-public class TableExample {
-
-  public static void main(String[] args) {
     // ...
     // Assuming you have just created a Hive catalog named `hive_catalog`
     Catalog catalog = gravitinoMetaLake.loadCatalog(NameIdentifier.of("metalake", "catalog"));
@@ -894,6 +755,4 @@ public class TableExample {
     NameIdentifier[] identifiers =
         tableCatalog.listTables(Namespace.ofTable("metalake", "catalog", "schema"));
     // ...
-  }
-}
 ```
